--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .card {
   /* backdrop-filter: blur(10px) saturate(195%); */
-  -webkit-backdrop-filter: blur(10px) saturate(195%);
-  background-color: rgba(99, 51, 104, 0.67);
+  /* -webkit-backdrop-filter: blur(10px) saturate(195%); */
+  background-color: rgba(99, 51, 104, 0.37);
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
   padding: 2rem 0.5rem;
